environments/bases/services/java-demo/backend/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-demo-backend-virtual-service
  # namespace: staging

spec:
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  hosts:
    - "*"
    # - java-demo-backend-service.staging.svc.cluster.local

  http:
    - name: "java-demo-backend"
      route:
        - destination:
            host: java-demo-backend-service.staging.svc.cluster.local
            port:
              number: 8080
